2004-08-17  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc64_elf_branch_reloc): New function.
	(ppc64_elf_howto_raw): Use ppc64_elf_branch_reloc.
	(ppc64_elf_brtaken_reloc): Here too.

2004-08-17  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (add_symbol_adjust): Correct mismatched function
	symbol visibility.
	(ppc64_elf_check_directives): Check that we have the right hash
	table before proceeding.

2004-08-17  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (struct ppc64_elf_obj_tdata): Add "deleted_section".
	(adjust_opd_syms): Attach opd syms for deleted entries to one of
	the sections that will be discarded.

2004-08-16  Alan Modra  <amodra@bigpond.net.au>

	* elflink.c (elf_section_complain_discarded): Ignore .fixup.

2004-08-16  Alan Modra  <amodra@bigpond.net.au>

	* bfd.c (_bfd_default_error_handler): Account for doubled '%' in
	free space available.

2004-08-16  Alan Modra  <amodra@bigpond.net.au>

	* pdp11.c (struct pdp11_aout_reloc_external): Delete.  Replace
	occurrences with bfd_btye * thoughout file.

	* coff-rs6000.c (do_shared_object_padding): Warning fix.
	(xcoff_write_armap_big): Likewise.
	(xcoff_write_archive_contents_old): Likewise.
	(xcoff_write_archive_contents_big): Likewise.

	* elf64-mmix.c (mmix_elf_get_section_contents): Delete declaration.

2004-08-13  Nick Clifton  <nickc@redhat.com>

	* elf32-arm.h: Convert to ISO C90.

2004-08-13  Alan Modra  <amodra@bigpond.net.au>

	PR 293
	* elf32-hppa.c (elf32_hppa_hide_symbol): Use init_refcount to
	zero the plt field.

2004-08-13  Alan Modra  <amodra@bigpond.net.au>

	* bfd.c (_bfd_default_error_handler): Handle %A and %B.
	(bfd_archive_filename, bfd_get_section_ident): Delete.
	* ecofflink.c (bfd_ecoff_debug_accumulate_other): Don't call
	bfd_archive_filename.
	* elflink.c (elf_link_input_bfd): Don't use callbacks->error_handler
	to warn about symbols in discarded sections.  Use _bfd_error_handler.
	* aout-adobe.c (aout_adobe_callback): See below.